ACCUMULO-4313 - Made several improvements to website:  * Put website in container  * Moved Accumulo logo to navbar  * Organized navbar  * Moved all ASF links to their own dropdown on right  * Added logo to home page and simplified text  * Reduced text in footer  * Put new window icons after links  * Renamed 'GitHub Issues' link in navbar to 'Pull Requests'  * Pages have a default font size of 14px rather 16px  * Sidebar with social links only visible on home page so    documentation fills page which improves readability  * Removed download link from sidebar and added to navbar  * Created 'legal_notice' front matter variable  * Increased navbar collapse width

--- a/css/accumulo.css
+++ b/css/accumulo.css
@@ -14,11 +14,28 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
+
+#nav-logo {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 body {
     /* for fixed top navbar */
     padding-top: 70px;
+    font-size: 14px;
+}
+
+.nav-link {
+    padding-top: 20px;
     font-size: 16px;
 }
+
+.nav-link, li.dropdown {
+    padding-top: 10px;
+    font-size: 16px;
+}
+
 ul.nav li.dropdown:hover > ul.dropdown-menu {
     /* so nav submenus open on hover */
     display: block;
@@ -26,23 +43,33 @@ ul.nav li.dropdown:hover > ul.dropdown-menu {
 #sidebar {
     font-size: 14px;
 }
+
+#home-description {
+    font-size: 16px;
+}
+
 #sociallinks td {
     /* no lines in the link table */
     border-top: none;
 }
+
 #bannertext {
     margin-top: 10px;
     text-align: left;
 }
+
 .clear {
     clear: both;
 }
+
 #content {
     padding: 0 8px 40px;
 }
+
 #content h1 {
     margin-bottom: 0.5em;
 }
+
 #content h2 {
     margin-bottom: 0.5em;
     border-bottom: 1px solid #CCCCCC;
@@ -120,8 +147,47 @@ h6:hover .header-link {
 h1[id]::before, h2[id]::before, h3[id]::before, h4[id]::before, h5[id]::before, h6[id]::before {
   display: block;
   content: " ";
-  margin-top: -55px;
-  height: 55px;
+  margin-top: -80px;
+  height: 80px;
   visibility: hidden;
+}
+
+/* Makes navbar collapse at larger width (917px) */
+@media (max-width: 971px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin: 7.5px -15px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in {
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
 }
 
